--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1864,14 +1864,14 @@ body.mobilenavopen  {
 							position: absolute;
 								right: 18px;
 								top: 11px;
-							transition: all 0.1s linear;
+							transition: all 0.5s linear;
 							vertical-align: middle;
 							width:15px;
 							
 						}
 						&:hover > a:after {
 							opacity:0;
-							transition: all 0.1s linear;
+							transition: all 0.3s linear;
 						}
 						
 					}
@@ -2112,13 +2112,12 @@ html {
 	margin-bottom:30px;
 	padding:20px;
 	transition:all 0.2s linear;
+	
 	a,
 	input,
 	img {
 		transition:all 0.2s linear; 
 	}
-	
-	
 	
 	.attendanceCol {
 		border:1px solid #ddd;
@@ -2170,10 +2169,13 @@ html {
 			.attendanceCol {
 				flex: 1 1;	
 				margin:0;
+				
 			}
 		}
-		 
+		
+		
 	}
+
 
 
 html #tribe-events-pg-template {
@@ -2182,6 +2184,15 @@ html #tribe-events-pg-template {
 
 html .tribe-events-page-template {
 	padding-top:100px;
+	.tribe-events-notices {
+		background: $colour-link;
+		color: #fff;
+		padding: 10px 20px;
+		ul {
+			list-style:none;
+			margin:0;
+		}
+	}
 	.tribe-events-schedule h2 {
 		font-size:20px;
 	}
@@ -2444,48 +2455,7 @@ html .tribe-events-event-meta{
 	display:flex;
 	align-items:center
 }
-#attendanceRoster {
-	background:#eee;
-	margin-bottom:30px;
-	padding:20px
-}
-#attendanceRoster .attendanceCol {
-	border:1px solid #ddd;
-	margin-bottom:20px;
-	padding:10px
-}
-#attendanceRoster ul {
-	list-style:none;
-	margin:0 0 30px 0
-}
-#attendanceRoster li {
-	height:20px;
-	line-height:20px;
-	margin-bottom:10px
-}
-#attendanceRoster li a {
-	display:inline-block;
-	line-height:20px
-}
-#attendanceRoster img {
-	border-radius:100%;
-	height:20px;
-	margin-right:3px;
-	vertical-align:top;
-	width:20px
-}
-@media only screen and (min-width:1200px) {
-	#attendanceRoster{
-		padding:30px
-	}
-	#attendanceRoster .wrap {
-		display:flex
-	}
-	#attendanceRoster .attendanceCol {
-		flex:1 1;
-		margin:0
-	}
-}
+
 
 html #tribe-events-pg-template{
 	max-width:800px
