--- a/style.css
+++ b/style.css
@@ -1947,13 +1947,13 @@ body.mobilenavopen {
     position: absolute;
     right: 18px;
     top: 11px;
-    transition: all 0.1s linear;
+    transition: all 0.5s linear;
     vertical-align: middle;
     width: 15px;
   }
   #nav2 ul li.menu-item-has-children:hover > a:after {
     opacity: 0;
-    transition: all 0.1s linear;
+    transition: all 0.3s linear;
   }
   #nav2 ul li .sub-menu {
     background: #222;
@@ -2235,6 +2235,15 @@ html #tribe-events-pg-template {
 
 html .tribe-events-page-template {
   padding-top: 100px;
+}
+html .tribe-events-page-template .tribe-events-notices {
+  background: #5c9bbf;
+  color: #fff;
+  padding: 10px 20px;
+}
+html .tribe-events-page-template .tribe-events-notices ul {
+  list-style: none;
+  margin: 0;
 }
 html .tribe-events-page-template .tribe-events-schedule h2 {
   font-size: 20px;
@@ -2520,54 +2529,6 @@ html .tribe-events-event-meta {
   align-items: center;
 }
 
-#attendanceRoster {
-  background: #eee;
-  margin-bottom: 30px;
-  padding: 20px;
-}
-
-#attendanceRoster .attendanceCol {
-  border: 1px solid #ddd;
-  margin-bottom: 20px;
-  padding: 10px;
-}
-
-#attendanceRoster ul {
-  list-style: none;
-  margin: 0 0 30px 0;
-}
-
-#attendanceRoster li {
-  height: 20px;
-  line-height: 20px;
-  margin-bottom: 10px;
-}
-
-#attendanceRoster li a {
-  display: inline-block;
-  line-height: 20px;
-}
-
-#attendanceRoster img {
-  border-radius: 100%;
-  height: 20px;
-  margin-right: 3px;
-  vertical-align: top;
-  width: 20px;
-}
-
-@media only screen and (min-width: 1200px) {
-  #attendanceRoster {
-    padding: 30px;
-  }
-  #attendanceRoster .wrap {
-    display: flex;
-  }
-  #attendanceRoster .attendanceCol {
-    flex: 1 1;
-    margin: 0;
-  }
-}
 html #tribe-events-pg-template {
   max-width: 800px;
 }
